// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders error mode 1`] = `
<span
  className="bp3-popover-wrapper"
>
  <span
    className="bp3-popover-target"
    onClick={[Function]}
  >
    <div
      className=""
      onKeyDown={[Function]}
    >
      <button
        className="bp3-button bp3-intent-danger"
        data-test-id="mode-picker-button"
        onBlur={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        title="Current execution mode"
        type="button"
      >
        <span
          className="bp3-icon bp3-icon-error"
          icon="error"
        >
          <svg
            data-icon="error"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <desc>
              error
            </desc>
            <path
              d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
              fillRule="evenodd"
            />
          </svg>
        </span>
        <span
          className="bp3-button-text"
        >
          Invalid Mode Selection
        </span>
        <span
          className="bp3-icon bp3-icon-caret-down"
          icon="caret-down"
        >
          <svg
            data-icon="caret-down"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <desc>
              caret-down
            </desc>
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </span>
</span>
`;

exports[`renders multi mode pipelines 1`] = `
<span
  className="bp3-popover-wrapper"
>
  <span
    className="bp3-popover-target"
    onClick={[Function]}
  >
    <div
      className=""
      onKeyDown={[Function]}
    >
      <button
        className="bp3-button"
        data-test-id="mode-picker-button"
        onBlur={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        title="Current execution mode"
        type="button"
      >
        <span
          className="bp3-button-text"
        >
          Mode: mode_1
        </span>
        <span
          className="bp3-icon bp3-icon-caret-down"
          icon="caret-down"
        >
          <svg
            data-icon="caret-down"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <desc>
              caret-down
            </desc>
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </span>
</span>
`;

exports[`renders multi mode pipelines 2`] = `
<span
  className="bp3-popover-wrapper"
>
  <span
    className="bp3-popover-target"
    onClick={[Function]}
  >
    <div
      className=""
      onKeyDown={[Function]}
    >
      <button
        className="bp3-button"
        data-test-id="mode-picker-button"
        onBlur={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        title="Current execution mode"
        type="button"
      >
        <span
          className="bp3-button-text"
        >
          Mode: mode_1
        </span>
        <span
          className="bp3-icon bp3-icon-caret-down"
          icon="caret-down"
        >
          <svg
            data-icon="caret-down"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <desc>
              caret-down
            </desc>
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </span>
</span>
`;

exports[`renders single mode pipelines 1`] = `
<span
  className="bp3-popover-wrapper"
>
  <span
    className="bp3-popover-target"
    onClick={[Function]}
  >
    <div
      className=""
      onKeyDown={[Function]}
    >
      <button
        className="bp3-button bp3-disabled"
        data-test-id="mode-picker-button"
        disabled={true}
        onBlur={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={-1}
        title="To add a mode, add a ModeDefinition to the pipeline."
        type="button"
      >
        <span
          className="bp3-button-text"
        >
          Mode: default
        </span>
        <span
          className="bp3-icon bp3-icon-caret-down"
          icon="caret-down"
        >
          <svg
            data-icon="caret-down"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <desc>
              caret-down
            </desc>
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </span>
</span>
`;

exports[`renders single mode pipelines 2`] = `
<span
  className="bp3-popover-wrapper"
>
  <span
    className="bp3-popover-target"
    onClick={[Function]}
  >
    <div
      className=""
      onKeyDown={[Function]}
    >
      <button
        className="bp3-button bp3-disabled"
        data-test-id="mode-picker-button"
        disabled={true}
        onBlur={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={-1}
        title="To add a mode, add a ModeDefinition to the pipeline."
        type="button"
      >
        <span
          className="bp3-button-text"
        >
          Mode: default
        </span>
        <span
          className="bp3-icon bp3-icon-caret-down"
          icon="caret-down"
        >
          <svg
            data-icon="caret-down"
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <desc>
              caret-down
            </desc>
            <path
              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </span>
</span>
`;
